<resources>
	<string name="app_name">TaskApp</string>

	<!-- Status Task -->
	<string name="status_task_todo">A Fazer</string>
	<string name="status_task_doing">Fazendo</string>
	<string name="status_task_done">Feitas</string>

	<!-- Generic -->
	<string name="text_title_warning">Atenção</string>
	<string name="text_button_warning">Entendi</string>
	<string name="email_empty">Preencha o e-mail</string>
	<string name="text_email">E-mail</string>
	<string name="password_empty">Preencha a senha</string>
	<string name="text_password">Senha</string>
	<string name="hint_text_email">Digite seu e-mail</string>
	<string name="hint_text_password">Digite sua senha</string>

	<!-- Login Fragment -->
	<string name="text_title_login_fragment">Login</string>
	<string name="text_button_register_login_fragment">Criar conta</string>
	<string name="text_button_recover_login_fragment">Recuperar conta</string>

	<!-- Recover Fragment -->
	<string name="text_title_recover_fragment">Recuperar conta</string>
	<string name="text_content_recover_fragment">Informe seu e-mail de cadastro para receber um link para alteração de senha.</string>

	<!-- New Account Fragment -->
	<string name="text_title_register">Criar conta</string>

	<!-- From Stack Fragment -->
	<string name="description_empty_register_task_fragment">Preencha uma descrição</string>

	<string name="hello_blank_fragment">Hello blank fragment</string>
</resources>