<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true"
	tools:context=".ui.auth.RegisterFragment">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		>

		<com.google.android.material.appbar.AppBarLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:backgroundTint="@color/color_default_dark"
			>

			<com.google.android.material.appbar.MaterialToolbar
				android:id="@+id/toolbar"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:navigationIcon="@drawable/ic_back"
				>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/text_title_register"
					android:textColor="@color/white"
					android:layout_gravity="center_horizontal" />

			</com.google.android.material.appbar.MaterialToolbar>

		</com.google.android.material.appbar.AppBarLayout>

		<LinearLayout
			android:id="@+id/linearLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="24dp"
			android:orientation="vertical"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.666"
			app:layout_constraintStart_toStartOf="parent"
			tools:layout_editor_absoluteY="196dp">


			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/text_email"
				android:layout_marginTop="16dp"
				android:textColor="@color/white" />

			<EditText
				android:id="@+id/editEmail"
				style="@style/EditTextTheme"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="4dp"
				android:hint="@string/hint_text_email"
				android:inputType="textEmailAddress"
				/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:text="@string/text_password"
				android:textColor="@color/white" />

			<EditText
				android:id="@+id/editPassword"
				style="@style/EditTextTheme"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="4dp"
				android:hint="@string/hint_text_password"
				android:inputType="textPassword"
				/>

			<Button
				android:id="@+id/btnRegister"
				style="@style/ButtonTheme"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:text="@string/text_button_register_login_fragment"
				/>

			<ProgressBar
				android:id="@+id/progressBar"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginTop="16dp"
				android:indeterminateTint="@color/white"
				android:visibility="invisible"
				tools:visibility="visible"
				/>

		</LinearLayout>


	</LinearLayout>

</ScrollView>